--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,19 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Omar Juma, Nike, Tee Classic, Damiakinsola, Ezekiel",
+  "author": "Omar Juma, Nike, Tee Classic, Demiakinsola, Ezekiel",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
